@@ -202,7 +202,7 @@ class Check(object):
         self.inventory_weave.check(progress_bar=self.progress)
         files_in_revisions = {}
         revisions_of_files = {}
-        weave_checker = self.repository.get_versioned_file_checker()
+        weave_checker = self.repository._get_versioned_file_checker()
         for i, weave_id in enumerate(weave_ids):
             self.progress.update('checking versionedfile', i, n_weaves)
             w = self.repository.weave_store.get_weave(weave_id,
