@@ -689,9 +689,9 @@ class RemoteRepository(object):
         self._ensure_real()
         return self._real_repository.fileids_altered_by_revision_ids(revision_ids)
 
-    def get_versioned_file_checker(self, revisions, revision_versions_cache):
+    def _get_versioned_file_checker(self, revisions, revision_versions_cache):
         self._ensure_real()
-        return self._real_repository.get_versioned_file_checker(
+        return self._real_repository._get_versioned_file_checker(
             revisions, revision_versions_cache)
         
     def iter_files_bytes(self, desired_files):
